--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -2,7 +2,7 @@
     z-index: 400;
     grid-column: 1;
     display: flex;
-    height: 100px;
+    height: 90px;
     align-items: center;
     justify-content: space-between;
     position: absolute;
